--- a/Beryl/Beryl.vcxproj
+++ b/Beryl/Beryl.vcxproj
@@ -84,6 +84,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalOptions>/MDd %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -109,6 +110,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalOptions>/MD %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -135,6 +137,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalOptions>/MD %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -157,14 +160,18 @@
     <ClInclude Include="src\Beryl\Events\Event.h" />
     <ClInclude Include="src\Beryl\Events\KeyEvent.h" />
     <ClInclude Include="src\Beryl\Events\MouseEvent.h" />
+    <ClInclude Include="src\Beryl\Layer.h" />
+    <ClInclude Include="src\Beryl\LayerStack.h" />
     <ClInclude Include="src\Beryl\Log.h" />
     <ClInclude Include="src\Beryl\Window.h" />
-    <ClInclude Include="src\blpch.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\WindowsWindow.h" />
+    <ClInclude Include="src\blpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Beryl\Application.cpp" />
+    <ClCompile Include="src\Beryl\Layer.cpp" />
+    <ClCompile Include="src\Beryl\LayerStack.cpp" />
     <ClCompile Include="src\Beryl\Log.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\blpch.cpp">
