--- a/Beryl/Beryl.vcxproj.filters
+++ b/Beryl/Beryl.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Beryl\Events">
       <UniqueIdentifier>{27DFB5E7-1342-458C-BCC7-7D42A809110F}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Beryl\ImGui">
+      <UniqueIdentifier>{0DCC9D5C-7981-1652-0276-10296E2A0D56}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Beryl\Events\MouseEvent.h">
       <Filter>Beryl\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Beryl\ImGui\ImGuiLayer.h">
+      <Filter>Beryl\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Beryl\Layer.h">
       <Filter>Beryl</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\Beryl\Window.h">
       <Filter>Beryl</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\Beryl\Application.cpp">
       <Filter>Beryl</Filter>
     </ClCompile>
+    <ClCompile Include="src\Beryl\ImGui\ImGuiLayer.cpp">
+      <Filter>Beryl\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Beryl\Layer.cpp">
       <Filter>Beryl</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\Beryl\Log.cpp">
       <Filter>Beryl</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
